Fixed weather image alignment and added rain icon

--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ img {
 .weather-main {
 	display: flex;
 	flex-direction: row;
-	align-items: baseline;
+	align-items: flex-end;
 }
 
 .weather-city {
